force-app/main/default/objects/Case_Survey_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Survey Response</relationshipLabel>
    <relationshipName>Case_Survey_Response</relationshipName>
    <type>Lookup</type>
</CustomField>