force-app/main/default/objects/Case_Survey_Response__c/fields/CSAT_Good_Bad__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Good_Bad__c</fullName>
    <description>Used to calculate CSAT %. Create a formula field of SUM(this field) / SUM(number of records)</description>
    <formula>IF(How_satisfied_are_you_with_service__c &gt; 3, 1, 
IF(AND(How_satisfied_are_you_with_service__c &gt; 0, How_satisfied_are_you_with_service__c &lt;= 3), 0, NULL
)
)</formula>
    <label>CSAT (Good / Bad)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>